# roburoc4

./: .gitignore  CMakeLists.txt  README.txt  TODO.txt  package.xml  roadmap.txt  setup.py  stack.xml
aseta_bringup/: mainpage.dox  manifest.xml
aseta_bringup/launch/: pmd.launch  pointgrey.launch  swissranger.launch  three_cams.launch
aseta_dataprocessing/: CMakeLists.txt  mainpage.dox  manifest.xml
aseta_dataprocessing/src/: bag_to_img.cpp  bag_to_pcd.cpp
aseta_sensors/: CMakeLists.txt  mainpage.dox  manifest.xml
aseta_sensors/helper_functions/: gnuplot_i.cpp  gnuplot_i.hpp  helper_functions.cpp  helper_functions.hpp
aseta_sensors/helper_functions/serialCommunicator/: serialCommunicator.cpp  serialCommunicator.hpp
aseta_sensors/launch/: aseta_sensors.launch
aseta_sensors/src/: gpsNode.cpp  gyroNode.cpp  magnetometerNode.cpp
cmake/Modules/: FindCurses.cmake  FindGeographicLib.cmake
develop_tools/udp_echo_server/: udp_echo_server.c
include/: roburoc4Comm.hpp  roburoc4_controllers.hpp
include/pure_protocol/: command_telegram.hpp  description_telegram.hpp  properties_telegram.hpp  pure_telegrams.hpp  replace_telegram.hpp  status_telegram.hpp
kdh_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
kdh_teleop/launch/: joystick.launch  teleop_ps3_controller.launch
kdh_teleop/src/: teleop_joy.cpp
launch/: aseta_sensors.launch  joystick.launch  mission_viewer.launch  roburoc4.launch  roburoc4_driver.launch  roburoc4_helmsman.launch  roburoc4_menu.launch  roburoc4_state_estimator.launch  roburoc4_trajectory.launch  roburoc4_trajectory_logger.launch  roburoc4_w_menu.launch  teleop_ps3_controller.launch
mission_supervisor/: CMakeLists.txt  manifest.xml
mission_supervisor/launch/: mission_supervisor.launch
mission_supervisor/scripts/: mission_supervisor.py
mission_supervisor/src/: latlon_converter.cpp  mission_supervisor.cpp  utm_file_reader.cpp
msg/: Trajectory.msg  TrajectoryPoints.msg
roburoc4_controllers/: CMakeLists.txt  mainpage.dox  manifest.xml
roburoc4_controllers/include/: roburoc4_controllers.hpp
roburoc4_controllers/launch/: roburoc4_trajectory_logger.launch
roburoc4_controllers/msg_gen/cpp/include/roburoc4_controllers/: LineSegment.h  Trajectory.h  TrajectoryPoints.h
roburoc4_controllers/src/: circle_tool.cpp  open_loop_playback.cpp  roburoc4_helmsman_controller.cpp  roburoc4_trajectory_controller.cpp  roburoc4_trajectory_logger.cpp
roburoc4_driver/: CMakeLists.txt  mainpage.dox  manifest.xml
roburoc4_driver/launch/: roburoc4_driver.launch
roburoc4_driver/msg/: battery.msg  io.msg  telemeter.msg
roburoc4_driver/pure_protocol/include/: command_telegram.hpp  description_telegram.hpp  properties_telegram.hpp  pure_telegrams.hpp  replace_telegram.hpp  status_telegram.hpp  telegram.hpp
roburoc4_driver/pure_protocol/src/: command_telegram.cpp  properties_telegram.cpp  replace_telegram.cpp  status_telegram.cpp  telegram.cpp
roburoc4_driver/roburoc4comm/: roburoc4Comm.hpp
roburoc4_driver/src/: roburoc4_driver.cpp  roburoc4_driver_old.cpp
roburoc4_menu/: CMakeLists.txt  mainpage.dox  manifest.xml
roburoc4_menu/launch/: roburoc4_menu.launch
roburoc4_menu/src/: roburoc4_menu.cpp
roburoc4_state_estimator/: CMakeLists.txt  mainpage.dox  manifest.xml
roburoc4_state_estimator/launch/: roburoc4_state_estimator.launch
roburoc4_state_estimator/msg/: States.msg
roburoc4_state_estimator/src/: roburoc4_state_estimator.cpp
scripts/: mission_viewer
src/: circle_tool.cpp  gpsNode.cpp  gyroNode.cpp  magnetometerNode.cpp  roburoc4Comm.cpp  roburoc4_driver.cpp  roburoc4_helmsman_controller.cpp  roburoc4_menu.cpp  roburoc4_state_estimator.cpp  roburoc4_trajectory_controller.cpp  roburoc4_trajectory_logger.cpp  teleop_joy.cpp  teleop_ps3_controller.cpp
src/helper_functions/: gnuplot_i.cpp  helper_functions.cpp  serialCommunicator.cpp
src/mission_viewer/: __init__.py  mission_viewer.py  mission_viewer.ui  ui_mission_viewer.py
src/pure_protocol/: command_telegram.cpp  properties_telegram.cpp  replace_telegram.cpp  status_telegram.cpp  telegram.cpp
viconToGps/: mainpage.dox  manifest.xml
viconToGps/launch/: roburoc4.launch
viconToGps/nodes/: conversion.py  listener.py  talker.py
